--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-   
+    "@clerk/nextjs": "^4.23.2",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
