--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.0.0",
     "@supabase/supabase-js": "^2.32.0",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "init": "^0.1.2",
     "next": "^13.4.8",
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "zustand": "^4.3.9"
   }
 }
